--- a/Practico5/Practico5.csproj
+++ b/Practico5/Practico5.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9DC4ED6F-4A73-4F2F-937B-5FA49E29DCF8}</ProjectGuid>
+    <ProjectGuid>{9E95C373-5051-48C2-8721-753FED8DDC0B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TrabajosPracticos45</RootNamespace>
-    <AssemblyName>TrabajosPracticos45</AssemblyName>
+    <RootNamespace>Practico5</RootNamespace>
+    <AssemblyName>Practico5</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -54,9 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
