--- a/TrabajosPracticos45/Practico4.csproj
+++ b/TrabajosPracticos45/Practico4.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9DC4ED6F-4A73-4F2F-937B-5FA49E29DCF8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>TrabajosPracticos45</RootNamespace>
-    <AssemblyName>TrabajosPracticos45</AssemblyName>
+    <AssemblyName>Practicos4</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
