--- a/TrabajosPracticos45/Practico4.csproj
+++ b/TrabajosPracticos45/Practico4.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9DC4ED6F-4A73-4F2F-937B-5FA49E29DCF8}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>TrabajosPracticos45</RootNamespace>
+    <RootNamespace>Practico4</RootNamespace>
     <AssemblyName>Practicos4</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -75,6 +75,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
