cmabio nombre imagen

--- a/Practico5/Practico5.csproj
+++ b/Practico5/Practico5.csproj
@@ -82,7 +82,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="bin\Debug\Fotos\Avatar1.jpeg" />
+    <None Include="bin\Debug\Fotos\Avatar1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
